--- a/7 занятие дз/docker-compose-db.yml
+++ b/7 занятие дз/docker-compose-db.yml
@@ -1,17 +1,18 @@
 version: "3"
 services:
-   db:
+  db:
     image: postgres:9.4
+    container_name: db
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - "db-data:/var/lib/postgresql/data"
     networks:
-      - backend
-    deploy:
-      placement:
-        constraints: [node.role == manager]
+      - back-tier
 
 volumes:
   db-data:
+
+networks:
+  back-tier:
